fix sidth items

--- a/control-panel.html
+++ b/control-panel.html
@@ -21,7 +21,7 @@
             <img src="images/healthy.svg" />
           </div>
           <div class="header__link-box">
-            <a href="index.html" class="header__link"> Users page *test </a>
+            <a href="index.html" class="header__link"> Сторінка користувача-> *test </a>
           </div>
         </div>
       </div>
