--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="header__link-box">
               <a href="control-panel.html" class="header__link">
-                Control page *test
+                Сторінка їдальні-> *test
               </a>
             </div>
           </div>
