--- a/index.html
+++ b/index.html
@@ -29,12 +29,9 @@
               <p class="header__name">School kitchen</p>
               <img class="header__img" src="images/icon2.svg" />
             </div>
-            <div class="header__center">
-              <img src="images/healthy.svg" />
-            </div>
             <div class="header__link-box">
               <a href="control-panel.html" class="header__link">
-                Сторінка їдальні-> *test
+                Сторінка їдальні *test
               </a>
             </div>
           </div>
